# LemonStation

./: .gitignore  README.md  app.py  main.py  package-lock.json  package.json  pyproject.toml
LemonStationRobot/.wpilib/: wpilib_preferences.json
LemonStationRobot/src/main/java/frc/robot/: Robot.java  RobotContainer.java
LemonStationRobot/src/main/java/frc/robot/subsystems/: Motor.java
frontLemon/: index.html  package-lock.json  package.json
frontLemon/src/: App.svelte  PropertiesMenu.svelte  TileMenu.svelte  app.ts  main.ts  propertiesMenu.ts  tileMenu.ts
frontend/: package-lock.json  package.json
frontend/src/: app.ts  index.html  index.ts  motorPropertiesMenu.html  motorPropertiesMenu.ts  motorTileMenu.html  motorTileMenu.ts
src/lib/: Home.svelte  MotorProperties.svelte  MotorTile.svelte  Motors.svelte  Tabs.svelte  motor.svelte.ts
src/routes/: +page.svelte
static/: index.html  index.js
static/style/: style.css
